# scds

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/scds/: hash_table.h  linked_list.h  ll.h
src/: hash_table.c  linked_list.c  ll.c
test/: test_linked_list.c
